Fix intro text alignment on mobile devices, center title in contact form

--- a/src/sass/layouts/_call-to-action.scss
+++ b/src/sass/layouts/_call-to-action.scss
@@ -23,8 +23,9 @@
     }
 
     @include media('<=sm') {
-      font-size: rem(38);
+      font-size: rem(34);
       margin-bottom: rem(50);
+      text-align: center;
     }
   }
 
